[package]
name = "tzparse"
version = "0.3.2"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/nicolasbauw/rs-tzparse"
description = "A high-level library to read timezone information files and return timechanges (ie. daylight saving time) and human readable data about a timezone."
keywords = ["timezone", "tzfiles", "time", "changes", "dst"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libtzfile = "0.4.0"