[package]
name = "tzparse"
version = "1.0.3"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/nicolasbauw/rs-tzparse"
description = "This high-level library reads IANA system timezone information files and returns timechanges (ie. daylight saving time) and human readable data about a timezone."
keywords = ["timezone", "tzfiles", "iana", "dst", "json"]
categories = ["date-and-time", "parsing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
json = ["serde", "serde_json", "chrono/serde" ]

[dependencies.libtzfile]
version = "1.0"
features = ["with-chrono"]